# claude-session-gateway

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
agent_broker/: a2a_shim.py  broker.py  common.py
config/: lanes.example.json  lanes.opencode.example.json
deploy/systemd/: agent-broker.service  session-gateway.service
docs/: A2A.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  SECURITY.md  STREAM-JSON.md  TROUBLESHOOTING.md
examples/: curl_examples.sh  python_client.py
session_gateway/: __init__.py  app.py  auth.py  child.py  config.py  lanes.py  locks.py  main.py  models.py  resume.py  sdk_protocol.py  session_manager.py  watch.py
session_gateway/routes/: discovered.py  lanes.py  prompt.py  sessions.py  watch.py
tests/: test_protocol.py
tests/fixtures/: NOTES.md  zen_raw.jsonl
