[project]
name = "claude-session-gateway"
version = "0.2.0"
description = "HTTP gateway to drive Claude Code sessions programmatically (context-preserving) + agent-to-agent messaging."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.urls]
Homepage = "https://github.com/your-org/claude-session-gateway"

[tool.setuptools]
packages = ["session_gateway", "session_gateway.routes"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
